applications/cve-manager/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: opengauss-cve-manager-ingress
  namespace: cve-manager
spec:
  tls:
    - hosts:
        - cve-opengauss.osinfra.cn
      secretName: opengauss-cve-manager-tls
  rules:
    - host: cve-opengauss.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: cve-manager-service
              servicePort: 80
            path: /cve-manager(/|$)(.*)
